# tmuch

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.amplihack/: kuzu_db
.claude/context/: PROJECT.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
python/tmuch/: __init__.py  __main__.py  cli.py
src/: action_handler.rs  app.rs  azlin_integration.rs  config.rs  consts.rs  editor_state.rs  event_loop.rs  ipc.rs  ipc_handler.rs  keys.rs  layout.rs  layouts.rs  main.rs  mouse.rs  pane.rs  pane_ops.rs  self_update.rs  session_picker.rs  theme.rs  tmux.rs  ui.rs  ui_bars.rs  ui_overlays.rs  update_check.rs
src/source/: clock.rs  command.rs  debug_log.rs  http.rs  local_tmux.rs  mod.rs  registry.rs  settings.rs  settings_render.rs  snake.rs  sparkline_monitor.rs  ssh_subprocess.rs  ssh_tmux.rs  sysinfo.rs  tail.rs  weather.rs
tests/: run-e2e.sh
tests/agentic/: smoke-tests.yaml  tmuch-smoke.yaml  tmuch-tui-sessions.yaml  tmuch-v02-features.yaml  tui-add-drop-panes.yaml  tui-key-bindings.yaml  tui-multi-pane.yaml  tui-pane-focus-input.yaml  tui-session-picker.yaml
tests/screenshots/: test2-two-panes.txt  test3-three-panes.txt  test4-focused.txt  test5-picker-open.txt  test6-after-bind-2.txt
