[package]
name = "tmuch"
version = "0.1.0"
edition = "2021"
description = "TUI tmux multiplexer - display multiple tmux sessions in a single terminal"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ansi-to-tui = "7"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
dirs = "6"
