[package]
name = "tmuch"
version = "0.3.8"
edition = "2021"
description = "TUI tmux multiplexer - display multiple tmux sessions in a single terminal"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ansi-to-tui = "7"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
dirs = "6"
shellexpand = "3"
libc = "0.2"
chrono = { version = "0.4", features = ["clock"] }

# Azure VM discovery (azlin-azure uses az CLI, no async needed)
azlin-azure = { git = "https://github.com/rysweet/azlin" }
